--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "lint-staged": "^13.0.3"
   },
   "lint-staged": {
-    "*.{js,css,md,vue}": "prettier --write"
+    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   }
 }
