--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,8 @@
         "pino-pretty": "^9.1.0",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^4.8.2"
+        "typescript": "^4.8.2",
+        "fastify": "^4.5.3"
     },
     "dependencies": {
         "common": "*"
