--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,8 +11,7 @@
         "common": "*",
         "next": "12.2.5",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "common": "*"
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
         "@types/node": "18.7.13",
