--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,7 +17,12 @@
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.8.2",
-        "fastify": "^4.5.3"
+        "fastify": "^4.5.3",
+        "@fastify/autoload": "^5.2.0",
+        "@fastify/cors": "^8.1.0",
+        "fastify-plugin": "^4.2.1",
+        "prisma": "^4.2.1",
+        "@prisma/client": "^4.2.1"
     },
     "dependencies": {
         "common": "*"
