--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -16,7 +16,8 @@
         "pino-pretty": "^9.1.0",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^4.8.2"
+        "typescript": "^4.8.2",
+        "yup": "^0.32.11"
     },
     "dependencies": {
         "joi": "^17.6.0"
