--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,19 +12,25 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@fastify/autoload": "^5.2.0",
+        "@fastify/cors": "^8.1.0",
+        "@prisma/client": "^4.2.1",
+        "@types/bcrypt": "^5.0.0",
+        "fastify": "^4.5.3",
+        "fastify-plugin": "^4.2.1",
+        "joi": "^17.6.0",
         "nodemon": "^2.0.19",
         "pino-pretty": "^9.1.0",
+        "prisma": "^4.2.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.8.2",
-        "fastify": "^4.5.3",
-        "@fastify/autoload": "^5.2.0",
-        "@fastify/cors": "^8.1.0",
-        "fastify-plugin": "^4.2.1",
-        "prisma": "^4.2.1",
-        "@prisma/client": "^4.2.1"
+        "yup": "^0.32.11"
     },
     "dependencies": {
+        "@sentry/node": "^7.11.1",
+        "@sentry/tracing": "^7.11.1",
+        "bcrypt": "^5.0.1",
         "common": "*"
     }
 }
