--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "lint": "npx prettier --write ."
   },
   "devDependencies": {
-    "lerna": "^5.4.3",
+    "@faker-js/faker": "^7.5.0",
     "husky": "^8.0.1",
+    "lerna": "^5.4.3",
     "lint-staged": "^13.0.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
+  },
+  "dependencies": {
+    "@types/node": "^18.7.14"
   }
 }
