--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,9 +16,9 @@
         "@fastify/cors": "^8.1.0",
         "@prisma/client": "^4.2.1",
         "@types/bcrypt": "^5.0.0",
+        "faker": "^6.6.6",
         "fastify": "^4.5.3",
         "fastify-plugin": "^4.2.1",
-        "joi": "^17.6.0",
         "nodemon": "^2.0.19",
         "pino-pretty": "^9.1.0",
         "prisma": "^4.2.1",
@@ -32,5 +32,8 @@
         "@sentry/tracing": "^7.11.1",
         "bcrypt": "^5.0.1",
         "common": "*"
+    },
+    "prisma": {
+        "seed": "ts-node ./prisma/seed.ts"
     }
 }
