--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon --exec ts-node src/app.ts | pino-pretty --colorize",
+        "dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/app.ts | pino-pretty --colorize",
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -16,6 +16,7 @@
         "@fastify/cors": "^8.1.0",
         "@prisma/client": "^4.2.1",
         "@types/bcrypt": "^5.0.0",
+        "cross-env": "^7.0.3",
         "fastify": "^4.5.3",
         "fastify-plugin": "^4.2.1",
         "joi": "^17.6.0",
@@ -28,8 +29,8 @@
         "yup": "^0.32.11"
     },
     "dependencies": {
-        "@sentry/node": "^7.11.1",
-        "@sentry/tracing": "^7.11.1",
+        "@sentry/node": "^7.12.0",
+        "@sentry/tracing": "^7.12.0",
         "bcrypt": "^5.0.1",
         "common": "*"
     }
