--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
         "@fastify/autoload": "^5.2.0",
         "@fastify/cors": "^8.1.0",
         "@prisma/client": "^4.2.1",
+        "@swc/core": "^1.2.248",
         "@types/bcrypt": "^5.0.0",
         "cross-env": "^7.0.3",
         "fastify": "^4.5.3",
