--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,6 +29,7 @@
         "yup": "^0.32.11"
     },
     "dependencies": {
+        "@fastify/jwt": "^6.3.2",
         "@sentry/node": "^7.12.0",
         "@sentry/tracing": "^7.12.0",
         "bcrypt": "^5.0.1",
