--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,7 +29,9 @@
         "yup": "^0.32.11"
     },
     "dependencies": {
+        "@fastify/auth": "^4.0.0",
         "@fastify/jwt": "^6.3.2",
+        "@fastify/redis": "^6.0.0",
         "@sentry/node": "^7.12.0",
         "@sentry/tracing": "^7.12.0",
         "bcrypt": "^5.0.1",
