--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "@fastify/auth": "^4.0.0",
+        "@fastify/cookie": "^8.1.0",
         "@fastify/jwt": "^6.3.2",
         "@fastify/redis": "^6.0.0",
         "@sentry/node": "^7.12.0",
