--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,7 @@
     "devDependencies": {
         "@fastify/autoload": "^5.2.0",
         "@fastify/cors": "^8.1.0",
-        "@prisma/client": "^4.2.1",
+        "@prisma/client": "^4.6.1",
         "@swc/core": "^1.2.248",
         "@types/bcrypt": "^5.0.0",
         "cross-env": "^7.0.3",
@@ -22,7 +22,7 @@
         "fastify-plugin": "^4.2.1",
         "nodemon": "^2.0.19",
         "pino-pretty": "^9.1.0",
-        "prisma": "^4.2.1",
+        "prisma": "^4.6.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.8.2",
@@ -36,7 +36,8 @@
         "@sentry/node": "^7.12.0",
         "@sentry/tracing": "^7.12.0",
         "bcrypt": "^5.0.1",
-        "common": "*"
+        "common": "*",
+        "dotenv": "^16.0.3"
     },
     "prisma": {
         "seed": "ts-node ./prisma/seed.ts"
