--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,7 +15,8 @@
         "next": "13.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-leaflet": "^4.1.0"
+        "react-leaflet": "^4.1.0",
+        "sass": "^1.56.1"
     },
     "devDependencies": {
         "@types/node": "18.7.13",
