--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,8 +11,10 @@
         "@heroicons/react": "^2.0.13",
         "@types/leaflet": "^1.9.0",
         "common": "*",
+        "formik": "^2.2.9",
         "leaflet": "^1.9.3",
         "next": "13.0.4",
+        "next-auth": "^4.17.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-leaflet": "^4.1.0",
