--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,15 +12,18 @@
         "@types/leaflet": "^1.9.0",
         "common": "*",
         "formik": "^2.2.9",
+        "jsonwebtoken": "^8.5.1",
         "leaflet": "^1.9.3",
         "next": "13.0.4",
         "next-auth": "^4.17.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-leaflet": "^4.1.0",
+        "react-toastify": "^9.1.1",
         "sass": "^1.56.1"
     },
     "devDependencies": {
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/node": "18.7.13",
         "@types/react": "18.0.17",
         "@types/react-dom": "18.0.6",
